# common-fastapi-microservice

./: Dockerfile  Makefile  README.md  cookiecutter.json  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
hooks/: post_gen_project.py
microservice/: app.py
microservice/database/: __init__.py  alembic.ini
microservice/database/alembic/: env.py
microservice/database/models/: __init__.py  auth.py
microservice/routes/: __init__.py
microservice/routes/auth/: auth_routes.py
microservice/routes/ping/: ping.py
microservice/services/: oauth.py
scripts/: env.sh  test_routes.json
scripts/luis_scripts/: en_train_data.json  es_train_data.json  list_apps.py  train_model.py
tests/: conftest.py  test_helper.bash  test_main.py  utils.bats
{{cookiecutter.project_name}}/: .gitignore  Dockerfile  LICENSE  Makefile  docker-compose.yaml  pyproject.toml  utils.sh
{{cookiecutter.project_name}}/tests/: conftest.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: app.py  config.py  constants.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/database/: __init__.py  alembic.ini
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/database/alembic/: env.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/database/models/: __init__.py  auth.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/routes/: __init__.py  routers.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/routes/auth/: auth_routes.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/services/: oauth.py
(+2 files in other folders)
