[tool.poetry]
name = "common-fastapi-microservice"
version = "0.1.0"
description = "A cookiecutter template for a common fast api microservice"
authors = ["nelsoHolic <nelson.holic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
taskipy = "^1.8.1"

[tool.taskipy.tasks]
tests = "bats $(find ./tests -name '*.bats' | sort)"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
